testdata/parser/negative/13.pdl
#version 100

// function statement must return
int myfun(int x) {
	if (x > 0) {
		while (x > 0) {
			x--;
			if (x == 0) skip; // illegal!
			else return x;
		}
	} else {
		int y = 0;
label:  if (y >= 0) {
			goto label;
		} else {
			y = 5;
			return myfun(x + 1);
		}
	}
}
